--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 
-<header class="contener">
+<header class="contener floatfix">
 <h1><a href="index.html">Gardener</a></h1>
 <nav>
+<a href="#" class="switch">MENU</a>
 <ul>
 <li><a href="index.html">Strona główna</a></li>
 <li><a href="#">Oferta</a></li>
